--- a/src/app/nation-view/nation-view.component.html
+++ b/src/app/nation-view/nation-view.component.html
@@ -1,3 +1,3 @@
-<div class="nation-view">
-    <span class="nation-view__name">{{nation.name}}</span>
-</div>
+<mat-card *ngIf="nation">
+    <mat-card-header color="primary">{{nation.name}}</mat-card-header>
+</mat-card>
